# edrs

./: Cargo.toml  README.md
src/: args.rs  io.rs  main.rs  textbuf.rs
testfiles/: rj.txt
