[package]
name = "edrs"
version = "0.1.0"
edition = "2021"
description = "A non-modal plaintext editor with saving and loading functionality."
readme = "README.md"
repository = "https://github.com/manorajesh/edrs"
license = "MIT"
keywords = ["text", "editor", "terminal", "cli", "input"]
categories = ["command-line-interface", "command-line-utilities"]
exclude = [".vscode", "testfiles", ".github", "Cargo.lock", "target"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = ">=4.3.8", features = ["derive"] }
crossterm = "0.26.1"
syntect = "5.0.0"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
debug = 1
